Added skip intro button - initial implementation

--- a/libraries/ui/src/main/res/layout/exo_player_control_view.xml
+++ b/libraries/ui/src/main/res/layout/exo_player_control_view.xml
@@ -144,6 +144,8 @@
 
     <include layout="@layout/exo_player_control_ffwd_button" />
 
+    <include layout="@layout/exo_player_control_skip_intro_button" />
+
     <ImageButton android:id="@id/exo_next"
         style="@style/ExoStyledControls.Button.Center.Next"/>
 
